--- a/practice/gridster/index.html
+++ b/practice/gridster/index.html
@@ -22,12 +22,64 @@
 
     <main>
       <article class="blog-post">
-        <img
-          src="images/btemplates-aquarium-by-francisco-oliveros.jpg"
-          alt="sasa"
-        />
-        <h3>Demo post with formatted elements and comments.</h3>
+        <header>
+          <img
+            src="images/btemplates-aquarium-by-francisco-oliveros.jpg"
+            alt="sasa"
+          />
+          <h3>Demo post with formatted elements and comments.</h3>
+        </header>
+        <main>
+          <p>
+            Aquarium. Photo by Francisco.Gridster is the template number 4664 in
+            BTemplates, where a total...
+          </p>
+        </main>
+        <footer>
+          <a class="footer-link" href="#">Read more>></a>
+        </footer>
       </article>
+      <article class="blog-post">
+        <header>
+          <img
+            src="images/btemplates-china-by-francisco-oliveros.jpg"
+            alt="sasa"
+          />
+          <h3>Images in this template.</h3>
+        </header>
+        <main>
+          <p>
+            China. Photo by Francisco. 15 Images in this template. You can
+            download...
+          </p>
+        </main>
+        <footer>
+          <a class="footer-link" href="#">Read more>></a>
+        </footer>
+      </article>
+      <article class="blog-post">
+        <header>
+          <img
+            src="images/btemplates-chichenitza-by-francisco-oliveros.jpg"
+            alt="sasa"
+          />
+          <h3>Gridster is the template number 4664 in BTemplates.</h3>
+        </header>
+        <main>
+          <p>
+            Chichenitza, Mexico. Photo by Francisco.Gridster is the template
+            number 4664 in BTemplates,...
+          </p>
+        </main>
+        <footer>
+          <a class="footer-link" href="#">Read more>></a>
+        </footer>
+      </article>
+      <aside class="bottom-nav">
+        <a class="bottom-nav-link" href="#">1</a>
+        <a class="bottom-nav-link" href="#">2</a>
+        <button><a class="bottom-nav-link" href="#">NEXT</a></button>
+      </aside>
     </main>
   </body>
 </html>
