--- a/03-CSS-Fundamentals/challange/index.html
+++ b/03-CSS-Fundamentals/challange/index.html
@@ -7,32 +7,33 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <article>
-      <h1>Converse Chuck Taylor All Star Low Top</h1>
-      <img
-        src="M9160_D_08X1.jpg"
-        alt="Chuck Taylor All Star Shoe"
-        height="300"
-        width="450"
-      />
-      <p>Chuck Taylor All Star Shoe</p>
-      <p class="price">$65.00</p>
-      <p class="shipping">Free shipping</p>
+    <div class="container">
+      <article class="article">
+        <h1>Converse Chuck Taylor All Star Low Top</h1>
+        <img
+          src="M9160_D_08X1.jpg"
+          alt="Chuck Taylor All Star Shoe"
+          height="300"
+          width="300"
+        />
+        <p class="price">$65.00</p>
+        <p class="shipping">Free shipping</p>
 
-      <p>
-        Ready to dress up or down, these classic canvas Chucks are an everyday
-        wardrobe staple.
-      </p>
-      <a href="#">More information →</a>
+        <p>
+          Ready to dress up or down, these classic canvas Chucks are an everyday
+          wardrobe staple.
+        </p>
+        <a class="more-info" href="#">More information →</a>
 
-      <h2>Product details</h2>
-      <ul>
-        <li>Lightweight, durable canvas sneaker</li>
-        <li>Lightly padded footbed for added comfort</li>
-        <li>Iconic Chuck Taylor ankle patch</li>
-      </ul>
+        <h2>Product details</h2>
+        <ul>
+          <li>Lightweight, durable canvas sneaker</li>
+          <li>Lightly padded footbed for added comfort</li>
+          <li>Iconic Chuck Taylor ankle patch</li>
+        </ul>
 
-      <button>Add to cart</button>
-    </article>
+        <button>Add to cart</button>
+      </article>
+    </div>
   </body>
 </html>
